--- a/airline-android/app/src/main/res/layout/activity_calculator.xml
+++ b/airline-android/app/src/main/res/layout/activity_calculator.xml
@@ -6,4 +6,55 @@
     android:layout_height="match_parent"
     tools:context=".CalculatorActivity">
 
+    <LinearLayout
+        android:layout_width="352dp"
+        android:layout_height="52dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.284">
+
+        <EditText
+            android:id="@+id/leftOperand"
+            android:layout_width="79dp"
+            android:layout_height="48dp"
+            android:ems="10"
+            android:hint="number"
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/plusOperator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+" />
+
+        <EditText
+            android:id="@+id/rightOperand"
+            android:layout_width="79dp"
+            android:layout_height="48dp"
+            android:ems="10"
+            android:hint="number"
+            android:inputType="number" />
+
+        <Button
+            android:id="@+id/equalButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="calculateSum"
+            android:text="=" />
+
+        <EditText
+            android:id="@+id/sumResult"
+            android:layout_width="79dp"
+            android:layout_height="48dp"
+            android:ems="10"
+            android:hint="sum"
+            android:inputType="number" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
