Changed button handler method names to include handler in name

--- a/airline-android/app/src/main/res/layout/activity_main.xml
+++ b/airline-android/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:id="@+id/helpButton"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:onClick="displayReadmeActivity"
+        android:onClick="helpBtnHandler"
         android:text="@string/helpText"
         app:icon="@android:drawable/ic_menu_info_details"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/airlineButton"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:onClick="displayAirlineActivity"
+        android:onClick="airlinesBtnHandler"
         android:text="@string/airlineText"
         app:icon="@android:drawable/ic_menu_mapmode"
         app:layout_constraintBottom_toBottomOf="parent"
