--- a/airline-android/app/src/main/res/layout/activity_airline.xml
+++ b/airline-android/app/src/main/res/layout/activity_airline.xml
@@ -10,7 +10,7 @@
         android:id="@+id/newFlightButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="addNewFlightActivity"
+        android:onClick="newFlightBtnHandler"
         android:text="@string/newFlightText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
