--- a/airline-android/app/src/main/res/layout/activity_main.xml
+++ b/airline-android/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_width="170dp"
         android:layout_height="60dp"
         android:onClick="searchBtnHandler"
-        android:text="Search"
+        android:text="@string/search"
         app:icon="@android:drawable/ic_menu_search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
         android:layout_width="170dp"
         android:layout_height="60dp"
         android:onClick="addFlightBtnHandler"
-        android:text="Add Flight"
+        android:text="@string/add_flight"
         app:icon="@android:drawable/ic_menu_edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
